--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header class="sticky top-0 z-50 bg-[#121212]/80 backdrop-blur-md border-b border-gray-800 shadow-sm">
   <div class="flex justify-between items-center px-6 py-4 max-w-7xl mx-auto">
     <div class="flex items-center space-x-3">
-      <img src="/logo-icon.svg" alt="Craytivo Logo" class="w-6 h-6">
+      <img src="assets\Craytivo No Text.png" alt="Craytivo Logo" class="w-6 h-6">
       <span class="text-xl font-bold tracking-wide">CRAYTIVO</span>
     </div>
     <nav class="space-x-6 hidden md:flex">
