Update homepage layout

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 
   <!-- Header -->
   <header class="sticky top-0 bg-[#121212]/80 backdrop-blur-md z-50 border-b border-gray-800 shadow-sm">
-    <div class="flex justify-between items-center p-6 max-w-7xl mx-auto">
+    <div class="flex justify-between items-center py-3 px-6 max-w-7xl mx-auto">
       <div class="flex items-center space-x-4">
-        <img src="assets/logo-no-text.png" alt="Craytivo Logo" class="w-36">
+        <img src="assets/logo-no-text.png" alt="Craytivo Logo" class="w-28">
       </div>
-      <nav class="space-x-6">
+      <nav class="space-x-6 text-sm">
         <a href="#about" class="hover:text-[#00E0C6]">About</a>
         <a href="#services" class="hover:text-[#00E0C6]">Services</a>
         <a href="#portfolio" class="hover:text-[#00E0C6]">Portfolio</a>
