--- a/index.html
+++ b/index.html
@@ -22,22 +22,23 @@
 
   <!-- Header -->
   <header class="sticky top-0 bg-[#121212]/80 backdrop-blur-md z-50 border-b border-gray-800 shadow-sm">
-    <div class="flex justify-between items-center py-3 px-6 max-w-7xl mx-auto">
-      <div class="flex items-center space-x-4">
-        <img src="assets/logo-no-text.png" alt="Craytivo Logo" class="w-28">
+    <div class="flex justify-between items-center py-2 px-6 max-w-7xl mx-auto">
+      <div class="flex items-center space-x-3">
+        <img src="assets/logo-no-text.png" alt="Craytivo Logo" class="w-20 h-auto">
+        <span class="text-lg font-extrabold tracking-wide uppercase">Craytivo</span>
       </div>
       <nav class="space-x-6 text-sm">
-        <a href="#about" class="hover:text-[#00E0C6]">About</a>
-        <a href="#services" class="hover:text-[#00E0C6]">Services</a>
-        <a href="#portfolio" class="hover:text-[#00E0C6]">Portfolio</a>
-        <a href="#contact" class="hover:text-[#00E0C6]">Contact</a>
+        <a href="#about" class="hover:text-[#00E0C6] transition">About</a>
+        <a href="#services" class="hover:text-[#00E0C6] transition">Services</a>
+        <a href="#portfolio" class="hover:text-[#00E0C6] transition">Portfolio</a>
+        <a href="#contact" class="hover:text-[#00E0C6] transition">Contact</a>
       </nav>
     </div>
   </header>
 
   <!-- Hero Section -->
   <section class="text-center py-24 px-4" id="hero">
-    <h1 class="text-5xl font-extrabold uppercase mb-4">Start simple. Grow bold.</h1>
+    <h1 class="text-4xl font-extrabold uppercase mb-4">Start simple. <span class="text-[#00E0C6]">Grow bold.</span></h1>
     <p class="text-lg max-w-xl mx-auto text-gray-300 mb-8 font-medium">
       I help business owners turn ideas into bold, high-performing websites with modern design and clear function.
     </p>
@@ -47,7 +48,7 @@
   </section>
 
   <!-- About -->
-  <section id="about" class="py-24 px-6 max-w-5xl mx-auto">
+  <section id="about" class="py-24 px-6 max-w-5xl mx-auto scroll-mt-20">
     <h2 class="text-3xl font-bold mb-6">About</h2>
     <p class="text-gray-300">
       Craytivo is a solo web studio focused on clear, conversion-driven design. I create fast, modern websites that connect with your audience and grow with your business. Whether you're launching a new brand or scaling an existing one, I build what you need.
@@ -55,11 +56,11 @@
   </section>
 
   <!-- Services -->
-  <section id="services" class="py-24 px-6 bg-[#1e1e1e]">
+  <section id="services" class="py-24 px-6 bg-[#1e1e1e] scroll-mt-20">
     <div class="max-w-5xl mx-auto">
       <h2 class="text-3xl font-bold mb-10">Services</h2>
       <div class="grid md:grid-cols-3 gap-8">
-        <div class="bg-[#2a2a2a] p-6 rounded-xl border border-gray-700">
+        <div class="bg-[#2a2a2a] p-6 rounded-xl border-t-4 border-[#00E0C6] shadow">
           <h3 class="font-semibold text-xl mb-2">Starter Package</h3>
           <ul class="text-gray-300 list-disc pl-4">
             <li>1-page responsive site</li>
@@ -67,7 +68,7 @@
             <li>Contact form setup</li>
           </ul>
         </div>
-        <div class="bg-[#2a2a2a] p-6 rounded-xl border border-gray-700">
+        <div class="bg-[#2a2a2a] p-6 rounded-xl border-t-4 border-[#FFD644] shadow">
           <h3 class="font-semibold text-xl mb-2">Business Package</h3>
           <ul class="text-gray-300 list-disc pl-4">
             <li>Multi-page site</li>
@@ -75,7 +76,7 @@
             <li>Performance optimization</li>
           </ul>
         </div>
-        <div class="bg-[#2a2a2a] p-6 rounded-xl border border-gray-700">
+        <div class="bg-[#2a2a2a] p-6 rounded-xl border-t-4 border-[#E14DFF] shadow">
           <h3 class="font-semibold text-xl mb-2">Custom Development</h3>
           <ul class="text-gray-300 list-disc pl-4">
             <li>Fully tailored web solutions</li>
@@ -88,26 +89,13 @@
   </section>
 
   <!-- Portfolio -->
-  <section id="portfolio" class="py-24 px-6 max-w-5xl mx-auto">
+  <section id="portfolio" class="py-24 px-6 max-w-5xl mx-auto scroll-mt-20">
     <h2 class="text-3xl font-bold mb-10">Portfolio</h2>
-    <div class="grid md:grid-cols-3 gap-6">
-      <div class="bg-[#1e1e1e] p-4 rounded-xl border border-gray-700">
-        <h4 class="font-semibold mb-2">SaaS Landing Page</h4>
-        <p class="text-gray-400">Modern responsive landing page for a startup, optimized for conversion.</p>
-      </div>
-      <div class="bg-[#1e1e1e] p-4 rounded-xl border border-gray-700">
-        <h4 class="font-semibold mb-2">Local Business Site</h4>
-        <p class="text-gray-400">Multi-page website for a bakery with online ordering features.</p>
-      </div>
-      <div class="bg-[#1e1e1e] p-4 rounded-xl border border-gray-700">
-        <h4 class="font-semibold mb-2">Personal Brand</h4>
-        <p class="text-gray-400">Portfolio site for a creative freelancer with blog integration.</p>
-      </div>
-    </div>
+    <p class="text-gray-400">Sample projects and visual case studies will appear here in the future.</p>
   </section>
 
   <!-- Contact -->
-  <section id="contact" class="py-24 px-6 bg-[#1e1e1e]">
+  <section id="contact" class="py-24 px-6 bg-[#1e1e1e] scroll-mt-20">
     <div class="max-w-xl mx-auto text-center">
       <h2 class="text-3xl font-bold mb-6">Get in Touch</h2>
       <form action="https://formspree.io/f/xanokynk" method="POST" class="space-y-6">
@@ -134,3 +122,4 @@
 
 </body>
 </html>
+
