--- a/index.html
+++ b/index.html
@@ -22,16 +22,17 @@
 
   <!-- Header -->
   <header class="sticky top-0 bg-[#121212]/80 backdrop-blur-md z-50 border-b border-gray-800 shadow-sm">
-    <div class="flex justify-between items-center py-2 px-6 max-w-7xl mx-auto">
-      <div class="flex items-center space-x-3">
-        <img src="assets/logo-no-text.png" alt="Craytivo Logo" class="w-20 h-auto">
-        <span class="text-lg font-extrabold tracking-wide uppercase">Craytivo</span>
+    <div class="flex justify-between items-center py-3 px-6 max-w-7xl mx-auto">
+      <div class="flex items-center space-x-4">
+        <img src="assets/logo-no-text.png" alt="Craytivo Logo" class="w-20">
+        <span class="text-xl font-extrabold tracking-wide uppercase">Craytivo</span>
       </div>
       <nav class="space-x-6 text-sm">
-        <a href="#about" class="hover:text-[#00E0C6] transition">About</a>
-        <a href="#services" class="hover:text-[#00E0C6] transition">Services</a>
-        <a href="#portfolio" class="hover:text-[#00E0C6] transition">Portfolio</a>
-        <a href="#contact" class="hover:text-[#00E0C6] transition">Contact</a>
+        <a href="#about" class="hover:text-[#00E0C6]">About</a>
+        <a href="#services" class="hover:text-[#00E0C6]">Services</a>
+        <a href="#pricing" class="hover:text-[#00E0C6]">Pricing</a>
+        <a href="#portfolio" class="hover:text-[#00E0C6]">Portfolio</a>
+        <a href="#contact" class="hover:text-[#00E0C6]">Contact</a>
       </nav>
     </div>
   </header>
@@ -48,7 +49,7 @@
   </section>
 
   <!-- About -->
-  <section id="about" class="py-24 px-6 max-w-5xl mx-auto scroll-mt-20">
+  <section id="about" class="py-24 px-6 max-w-5xl mx-auto">
     <h2 class="text-3xl font-bold mb-6">About</h2>
     <p class="text-gray-300">
       Craytivo is a solo web studio focused on clear, conversion-driven design. I create fast, modern websites that connect with your audience and grow with your business. Whether you're launching a new brand or scaling an existing one, I build what you need.
@@ -56,11 +57,11 @@
   </section>
 
   <!-- Services -->
-  <section id="services" class="py-24 px-6 bg-[#1e1e1e] scroll-mt-20">
+  <section id="services" class="py-24 px-6 bg-[#1e1e1e]">
     <div class="max-w-5xl mx-auto">
       <h2 class="text-3xl font-bold mb-10">Services</h2>
       <div class="grid md:grid-cols-3 gap-8">
-        <div class="bg-[#2a2a2a] p-6 rounded-xl border-t-4 border-[#00E0C6] shadow">
+        <div class="bg-[#2a2a2a] p-6 rounded-xl border-t-4 border-[#00E0C6]">
           <h3 class="font-semibold text-xl mb-2">Starter Package</h3>
           <ul class="text-gray-300 list-disc pl-4">
             <li>1-page responsive site</li>
@@ -68,7 +69,7 @@
             <li>Contact form setup</li>
           </ul>
         </div>
-        <div class="bg-[#2a2a2a] p-6 rounded-xl border-t-4 border-[#FFD644] shadow">
+        <div class="bg-[#2a2a2a] p-6 rounded-xl border-t-4 border-[#FFD644]">
           <h3 class="font-semibold text-xl mb-2">Business Package</h3>
           <ul class="text-gray-300 list-disc pl-4">
             <li>Multi-page site</li>
@@ -76,7 +77,7 @@
             <li>Performance optimization</li>
           </ul>
         </div>
-        <div class="bg-[#2a2a2a] p-6 rounded-xl border-t-4 border-[#E14DFF] shadow">
+        <div class="bg-[#2a2a2a] p-6 rounded-xl border-t-4 border-[#FF5C8A]">
           <h3 class="font-semibold text-xl mb-2">Custom Development</h3>
           <ul class="text-gray-300 list-disc pl-4">
             <li>Fully tailored web solutions</li>
@@ -88,14 +89,103 @@
     </div>
   </section>
 
+  <!-- Pricing -->
+  <section id="pricing" class="py-24 px-6 max-w-5xl mx-auto">
+    <h2 class="text-3xl font-bold mb-10 text-center">Pricing</h2>
+    <div class="grid md:grid-cols-3 gap-8 text-sm">
+      <div class="bg-[#2a2a2a] p-6 rounded-xl border border-gray-700">
+        <h3 class="text-xl font-semibold mb-2">Starter – $120 USD</h3>
+        <ul class="text-gray-300 list-disc pl-4">
+          <li>1-page responsive site</li>
+          <li>Branded styling</li>
+          <li>Contact form</li>
+          <li>Mobile-ready</li>
+          <li>5–7 day delivery</li>
+        </ul>
+      </div>
+      <div class="bg-[#2a2a2a] p-6 rounded-xl border border-gray-700">
+        <h3 class="text-xl font-semibold mb-2">Business – $350 USD</h3>
+        <ul class="text-gray-300 list-disc pl-4">
+          <li>3–5 responsive pages</li>
+          <li>SEO & speed optimization</li>
+          <li>Google indexing</li>
+          <li>WhatsApp/email integration</li>
+          <li>7–10 day delivery</li>
+        </ul>
+      </div>
+      <div class="bg-[#2a2a2a] p-6 rounded-xl border border-gray-700">
+        <h3 class="text-xl font-semibold mb-2">Custom – from $700 USD</h3>
+        <ul class="text-gray-300 list-disc pl-4">
+          <li>Fully custom design</li>
+          <li>CMS or dynamic features</li>
+          <li>Animations or blog/store</li>
+          <li>Includes revisions</li>
+          <li>Flexible timeline</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="mt-12">
+      <h3 class="text-2xl font-semibold mb-4 text-center">Optional Add-Ons</h3>
+      <div class="overflow-x-auto">
+        <table class="table-auto w-full text-left text-gray-300 text-sm border-collapse">
+          <thead>
+            <tr class="text-white border-b border-gray-700">
+              <th class="py-2 px-4">Add-On</th>
+              <th class="py-2 px-4">Price (USD)</th>
+              <th class="py-2 px-4">Details</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr class="border-b border-gray-800">
+              <td class="py-2 px-4">Logo Design</td>
+              <td class="py-2 px-4">$50</td>
+              <td class="py-2 px-4">Simple, professional logo tailored to your brand</td>
+            </tr>
+            <tr class="border-b border-gray-800">
+              <td class="py-2 px-4">Domain + Hosting Setup</td>
+              <td class="py-2 px-4">$30</td>
+              <td class="py-2 px-4">Setup and connect your domain, email, and hosting</td>
+            </tr>
+            <tr class="border-b border-gray-800">
+              <td class="py-2 px-4">Social Media Integration</td>
+              <td class="py-2 px-4">$20</td>
+              <td class="py-2 px-4">Embed social links, chat buttons, or feeds</td>
+            </tr>
+            <tr class="border-b border-gray-800">
+              <td class="py-2 px-4">Copywriting Assistance</td>
+              <td class="py-2 px-4">$40</td>
+              <td class="py-2 px-4">Help writing content for key pages</td>
+            </tr>
+            <tr class="border-b border-gray-800">
+              <td class="py-2 px-4">Google Analytics</td>
+              <td class="py-2 px-4">$15</td>
+              <td class="py-2 px-4">Track traffic and user behavior</td>
+            </tr>
+            <tr class="border-b border-gray-800">
+              <td class="py-2 px-4">Monthly Website Updates</td>
+              <td class="py-2 px-4">$20/mo</td>
+              <td class="py-2 px-4">Small updates and maintenance</td>
+            </tr>
+            <tr>
+              <td class="py-2 px-4">Express Delivery</td>
+              <td class="py-2 px-4">+25%</td>
+              <td class="py-2 px-4">Faster turnaround for urgent needs</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </section>
+
   <!-- Portfolio -->
-  <section id="portfolio" class="py-24 px-6 max-w-5xl mx-auto scroll-mt-20">
+  <section id="portfolio" class="py-24 px-6 max-w-5xl mx-auto">
     <h2 class="text-3xl font-bold mb-10">Portfolio</h2>
-    <p class="text-gray-400">Sample projects and visual case studies will appear here in the future.</p>
+    <p class="text-gray-400">Portfolio samples coming soon. Check back for updates or get in touch to request examples.</p>
   </section>
 
   <!-- Contact -->
-  <section id="contact" class="py-24 px-6 bg-[#1e1e1e] scroll-mt-20">
+  <section id="contact" class="py-24 px-6 bg-[#1e1e1e]">
     <div class="max-w-xl mx-auto text-center">
       <h2 class="text-3xl font-bold mb-6">Get in Touch</h2>
       <form action="https://formspree.io/f/xanokynk" method="POST" class="space-y-6">
@@ -114,6 +204,7 @@
     <div class="mb-2">
       <a href="#about" class="mx-2 hover:text-white">About</a>
       <a href="#services" class="mx-2 hover:text-white">Services</a>
+      <a href="#pricing" class="mx-2 hover:text-white">Pricing</a>
       <a href="#portfolio" class="mx-2 hover:text-white">Portfolio</a>
       <a href="#contact" class="mx-2 hover:text-white">Contact</a>
     </div>
@@ -122,4 +213,3 @@
 
 </body>
 </html>
-
