--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" class="scroll-smooth">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Craytivo</title>
-  <link rel="icon" type="image/png" href="/assets/favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;800&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
@@ -24,7 +23,7 @@
   <!-- Header -->
   <header class="sticky top-0 bg-[#121212]/80 backdrop-blur-md z-50 border-b border-gray-800 shadow-sm">
     <div class="flex justify-between items-center py-2 px-6 max-w-7xl mx-auto">
-      <div class="flex items-center space-x-3">
+      <div class="flex items-center space-x-4">
         <img src="assets/logo-no-text.png" alt="Craytivo Logo" class="w-16">
         <span class="text-lg font-extrabold tracking-wide uppercase">Craytivo</span>
       </div>
@@ -32,23 +31,30 @@
         <a href="#about" class="hover:text-[#00E0C6]">About</a>
         <a href="#services" class="hover:text-[#00E0C6]">Services</a>
         <a href="#pricing" class="hover:text-[#00E0C6]">Pricing</a>
+        <a href="#portfolio" class="hover:text-[#00E0C6]">Portfolio</a>
         <a href="#contact" class="hover:text-[#00E0C6]">Contact</a>
       </nav>
-      <div class="md:hidden">
-        <button id="menu-btn" class="text-white focus:outline-none">
-          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-6 h-6">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
-          </svg>
-        </button>
-      </div>
+      <button id="mobile-menu-button" class="md:hidden text-white focus:outline-none">
+        <svg class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
+        </svg>
+      </button>
     </div>
-    <div id="mobile-menu" class="hidden md:hidden px-6 pb-4">
-      <a href="#about" class="block py-2 hover:text-[#00E0C6]">About</a>
-      <a href="#services" class="block py-2 hover:text-[#00E0C6]">Services</a>
-      <a href="#pricing" class="block py-2 hover:text-[#00E0C6]">Pricing</a>
-      <a href="#contact" class="block py-2 hover:text-[#00E0C6]">Contact</a>
+    <div id="mobile-menu" class="hidden md:hidden px-6 pb-4 space-y-2">
+      <a href="#about" class="block hover:text-[#00E0C6]">About</a>
+      <a href="#services" class="block hover:text-[#00E0C6]">Services</a>
+      <a href="#pricing" class="block hover:text-[#00E0C6]">Pricing</a>
+      <a href="#portfolio" class="block hover:text-[#00E0C6]">Portfolio</a>
+      <a href="#contact" class="block hover:text-[#00E0C6]">Contact</a>
     </div>
   </header>
+
+  <script>
+    document.getElementById('mobile-menu-button').addEventListener('click', function () {
+      const menu = document.getElementById('mobile-menu');
+      menu.classList.toggle('hidden');
+    });
+  </script>
 
   <!-- Hero Section -->
   <section class="text-center py-24 px-4" id="hero">
@@ -107,31 +113,47 @@
     <h2 class="text-3xl font-bold mb-10">Pricing</h2>
     <div class="grid md:grid-cols-3 gap-8">
       <div class="bg-[#2a2a2a] p-6 rounded-xl border border-gray-700">
-        <h3 class="font-semibold text-xl mb-4">Starter - $100</h3>
-        <p class="text-gray-300 mb-4">Perfect for individuals and small projects.</p>
-        <ul class="text-gray-400 list-disc pl-5">
+        <h3 class="font-semibold text-xl mb-2">Starter Package – $120</h3>
+        <ul class="text-gray-300 list-disc pl-4">
           <li>1-page responsive site</li>
-          <li>Contact form</li>
+          <li>Custom branding</li>
+          <li>Basic contact form</li>
         </ul>
       </div>
       <div class="bg-[#2a2a2a] p-6 rounded-xl border border-gray-700">
-        <h3 class="font-semibold text-xl mb-4">Business - $200</h3>
-        <p class="text-gray-300 mb-4">For growing businesses that need more pages.</p>
-        <ul class="text-gray-400 list-disc pl-5">
+        <h3 class="font-semibold text-xl mb-2">Business Package – $220</h3>
+        <ul class="text-gray-300 list-disc pl-4">
           <li>Up to 5 pages</li>
+          <li>Contact & service pages</li>
           <li>Performance optimization</li>
         </ul>
       </div>
       <div class="bg-[#2a2a2a] p-6 rounded-xl border border-gray-700">
-        <h3 class="font-semibold text-xl mb-4">Add-ons</h3>
-        <ul class="text-gray-400 list-disc pl-5">
-          <li>Logo design - $40</li>
-          <li>Domain setup - $25</li>
-          <li>Analytics - $25</li>
-          <li>SEO - $25</li>
+        <h3 class="font-semibold text-xl mb-2">Custom Development – from $300</h3>
+        <ul class="text-gray-300 list-disc pl-4">
+          <li>Custom features & layout</li>
+          <li>Interactive design</li>
+          <li>Consultation included</li>
         </ul>
       </div>
     </div>
+    <div class="mt-12">
+      <h4 class="text-2xl font-semibold mb-4">Optional Add-Ons</h4>
+      <ul class="text-gray-300 list-disc pl-6">
+        <li>Logo design – $40</li>
+        <li>Email integration – $30</li>
+        <li>SEO optimization – $50</li>
+        <li>Google Analytics setup – $25</li>
+        <li>Monthly maintenance (optional) – $20/month</li>
+        <li>Hosting & domain setup – $30</li>
+      </ul>
+    </div>
+  </section>
+
+  <!-- Portfolio -->
+  <section id="portfolio" class="py-24 px-6 max-w-5xl mx-auto">
+    <h2 class="text-3xl font-bold mb-10">Portfolio</h2>
+    <p class="text-gray-400 text-sm">Coming soon — real projects from real clients.</p>
   </section>
 
   <!-- Contact -->
@@ -139,9 +161,9 @@
     <div class="max-w-xl mx-auto text-center">
       <h2 class="text-3xl font-bold mb-6">Get in Touch</h2>
       <form action="https://formspree.io/f/xanokynk" method="POST" class="space-y-6">
-        <input type="text" name="name" placeholder="Your Name" required class="w-full bg-transparent border-b border-gray-500 focus:outline-none py-2 text-white">
-        <input type="email" name="email" placeholder="Your Email" required class="w-full bg-transparent border-b border-gray-500 focus:outline-none py-2 text-white">
-        <textarea name="message" rows="4" placeholder="Your Message" required class="w-full bg-transparent border-b border-gray-500 focus:outline-none py-2 text-white"></textarea>
+        <input type="text" name="name" placeholder="Your Name" class="w-full bg-transparent border-b border-gray-500 focus:outline-none py-2 text-white">
+        <input type="email" name="email" placeholder="Your Email" class="w-full bg-transparent border-b border-gray-500 focus:outline-none py-2 text-white">
+        <textarea name="message" rows="4" placeholder="Your Message" class="w-full bg-transparent border-b border-gray-500 focus:outline-none py-2 text-white"></textarea>
         <button type="submit" class="bg-[#FFD644] text-black font-semibold py-2 px-6 rounded-full hover:bg-opacity-80 transition">
           Send Message
         </button>
@@ -155,15 +177,12 @@
       <a href="#about" class="mx-2 hover:text-white">About</a>
       <a href="#services" class="mx-2 hover:text-white">Services</a>
       <a href="#pricing" class="mx-2 hover:text-white">Pricing</a>
+      <a href="#portfolio" class="mx-2 hover:text-white">Portfolio</a>
       <a href="#contact" class="mx-2 hover:text-white">Contact</a>
     </div>
     &copy; 2025 Craytivo. Start simple. Grow bold.
   </footer>
 
-  <script>
-    document.getElementById('menu-btn').addEventListener('click', () => {
-      document.getElementById('mobile-menu').classList.toggle('hidden');
-    });
-  </script>
 </body>
 </html>
+
